Docs: Add content to ceviche.html
Add image of ceviche
Add Description of the dish
Add ingredients
Add Steps

--- a/recipes/ceviche.html
+++ b/recipes/ceviche.html
@@ -7,5 +7,26 @@
 </head>
 <body>
     <h1>Ceviche</h1>
+    <img src="https://s.yimg.com/ny/api/res/1.2/kwntVqsD.QbzDMOlfIqOpA--/YXBwaWQ9aGlnaGxhbmRlcjt3PTY0MDtoPTQyNw--/https://media.zenfs.com/es/animal_gourmet_468/2d3186e29d4279c2f2f38bca0bb23d69" alt="Ceviche dish">
+    <p>There are many ceviches, but there is only one Sinaloa style and I am sure you will love this one, because it is nothing like the rest of the shrimp ceviches you have tried, I assure you.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>½ Pound raw shrimp</li>
+        <li>1 Cucumber</li>
+        <li>2 Tomatoes</li>
+        <li>½ Purple onion</li>
+        <li>5 Serrano chili</li>
+        <li>1 Handful of green cilantro</li>
+        <li>1 Pinch of salt</li>
+        <li>Lemons</li>
+        <li>1 Pinch of pepper</li>
+        <li>1 Bottle of Clamato</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Chop the shrimp as finely as possible. Put them in a container, add the lemon juice until they are completely covered and season with salt and ground pepper. Reserve and let it marinate for a while.</li>
+        <li>When the shrimp turn pink, add the vegetables and cilantro, all finely chopped. Also add the vegetable and tomato juices to the Sinaloan shrimp ceviche and stir well so that the ingredients are mixed evenly. Reserve and let it rest in the refrigerator for half an hour.</li>
+        <li>After this time you can serve this delicious Sinaloa-style shrimp ceviche. I recommend accompanying it with Mexican toast or homemade nachos.</li>
+    </ol>
 </body>
 </html>
