feat: Added links to the index for new recipes
Added corresponding links in the index.html file for the Pesto Pizza and Brown Sugar Smokies recipes.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="/recipes/ceviche.html">Ceviche</a>
+    <a href="/recipes/pesto_pizza.html">Pesto Pizza</a>
+    <a href="/recipes/brown_sugar_smokies.html">Brown Sugar Smokies</a>
 </body>
 </html>
