feat: Added CSS styles to improve design and presentation
Updated the styles.css file to include additional styles for the index.html page and the other html for recipes brown_sugar_smokies.html, ceviche.html and pesto_pizza.html.

Added CSS classes to HTML elements to improve design and presentation.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="/recipes/ceviche.html">Ceviche</a>
-    <a href="/recipes/pesto_pizza.html">Pesto Pizza</a>
-    <a href="/recipes/brown_sugar_smokies.html">Brown Sugar Smokies</a>
+    <h1 class="title">Odin Recipes</h1>
+    <ul>
+        <li><a class="recipes" href="/recipes/ceviche.html">Ceviche</a></li>
+        <li><a class="recipes" href="/recipes/pesto_pizza.html">Pesto Pizza</a></li>
+        <li><a class="recipes" href="/recipes/brown_sugar_smokies.html">Brown Sugar Smokies</a></li>
+    </ul>
 </body>
 </html>
