--- a/recipes/ceviche.html
+++ b/recipes/ceviche.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>Ceviche</h1>
+    <h1 class="title">Ceviche</h1>
     <img src="https://s.yimg.com/ny/api/res/1.2/kwntVqsD.QbzDMOlfIqOpA--/YXBwaWQ9aGlnaGxhbmRlcjt3PTY0MDtoPTQyNw--/https://media.zenfs.com/es/animal_gourmet_468/2d3186e29d4279c2f2f38bca0bb23d69" alt="Ceviche dish">
     <p>There are many ceviches, but there is only one Sinaloa style and I am sure you will love this one, because it is nothing like the rest of the shrimp ceviches you have tried, I assure you.</p>
-    <h2>Ingredients</h2>
+    <h2  class="sub-title">Ingredients</h2>
     <ul>
         <li>½ Pound raw shrimp</li>
         <li>1 Cucumber</li>
@@ -22,7 +23,7 @@
         <li>1 Pinch of pepper</li>
         <li>1 Bottle of Clamato</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="sub-title">Steps</h2>
     <ol>
         <li>Chop the shrimp as finely as possible. Put them in a container, add the lemon juice until they are completely covered and season with salt and ground pepper. Reserve and let it marinate for a while.</li>
         <li>When the shrimp turn pink, add the vegetables and cilantro, all finely chopped. Also add the vegetable and tomato juices to the Sinaloan shrimp ceviche and stir well so that the ingredients are mixed evenly. Reserve and let it rest in the refrigerator for half an hour.</li>
