--- a/recipes/brown_sugar_smokies.html
+++ b/recipes/brown_sugar_smokies.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brown Sugar Smokies</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>Brown Sugar Smokies</h1>
+    <h1 class="title">Brown Sugar Smokies</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F06%2F07%2F6188728-brown-sugar-smokies-sloninja-1x1-1.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Brown Sugar Smokies dish">
     <p>These bacon-wrapped little smokies with a brown sugar glaze are yummy! You can make these little smokies on skewers or toothpick them to secure.</p>
-    <h2>Ingredients</h2>
+    <h2 class="sub-title">Ingredients</h2>
     <ul>
         <li>1 pound bacon</li>
         <li>1 (16 ounce) package little smokie sausages</li>
         <li>1 cup brown sugar, or to taste</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="sub-title">Steps</h2>
     <ol>
         <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
         <li>Cut bacon slices into thirds and wrap each strip around a sausage. Secure the wrapped sausages on wooden skewers, several to a skewer. Arrange the skewers on a baking sheet and sprinkle them liberally with brown sugar.</li>
