--- a/recipes/pesto_pizza.html
+++ b/recipes/pesto_pizza.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pesto Pizza</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>Pesto Pizza</h1>
+    <h1 class="title">Pesto Pizza</h1>
     <img src="https://www.allrecipes.com/thmb/IY6gXHP89oNP238BZWu25VC_zxc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/21528-Pesto-Pizza-dabblingdiva_5423214_original-4x3-1-cf97d756ed4947c69f9b9e0c3bb8a90c.jpg" alt="Pesto pizza dish">
     <p>Pesto pizza is a great alternative to your regular pizza</p>
-    <h2>Ingredients</h2>
+    <h2 class="sub-title">Ingredients</h2>
     <ul>
         <li>1 (12 inch) pre-baked pizza crust</li>
         <li>½ cup pesto</li>
@@ -20,7 +21,7 @@
         <li>1 (4 ounce) can artichoke hearts, drained and sliced</li>
         <li>1 cup crumbled feta cheese</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="sub-title">Steps</h2>
     <ol>
         <li>Preheat the oven to 450 degrees F (230 degrees C). </li>
         <li>Spread pesto on pizza crust. Top with tomato, bell pepper, olives, red onion, artichoke hearts, and feta cheese. </li>
